[tool.poetry]
name = "uk-hpi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
polars = "^0.20.3"
ipywidgets = "^8.1.1"
ipykernel = "^6.28.0"
jupyter-contrib-nbextensions = "^0.7.0"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
isort = "^5.13.2"
pytest = "^7.4.4"
pytest-icdiff = "^0.9"
pytest-sugar = "^0.9.7"
ipykernel = "^6.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
